[package]
name = "irma"
version = "0.2.1"
authors = ["David Venhoek <david@venhoek.nl>"]
edition = "2021"
repository = "https://github.com/tweedegolf/irmars"
license = "Apache-2.0"
description = "A rust interface for interacting with IRMA servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "^0.11.6", features=["json"]}
serde = {version = "^1.0.123", features=["derive"]}
serde_json = "^1.0.61"
thiserror = "^1.0.30"
url = "^2.2.2"

[dev-dependencies]
maplit = "1.0.2"
qrcode = "0.12.0"
serial_test = "0.5.1"
tokio = {version = "1.13.0", features=["full"]}
tokio-test = "0.4.2"
